--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -1,29 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
 
     <TextView
-        android:fontFamily="sans-serif-medium"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:paddingTop="8dp"
-        android:layout_gravity="left"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/review_author_textview" />
+        android:id="@+id/review_author_textview"
+        style="@style/ReviewAuthorText"
+        tools:text="Author"
+
+        />
 
     <TextView
-        android:fontFamily="sans-serif"
-        android:textSize="16sp"
-        android:paddingTop="8dp"
-        android:layout_gravity="left"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:maxLines="5"
-        android:id="@+id/review_content_textview" />
+        android:id="@+id/review_content_textview"
+        style="@style/ReviewContentText"
+        tools:text="New Text"
+        />
 
 </LinearLayout>
