--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2196F3</color>
-    <color name="colorPrimaryDark">#1976D2</color>
-    <color name="colorAccent">#536DFE</color>
-    <color name="colorLighterGray">#ddd</color>
+    <color name="color_primary">#f44336</color>
+    <color name="color_primary_dark">#c62828</color>
+    <color name="color_primary_light">#e57373</color>
+    <color name="color_accent">#546e7a</color>
+    <color name="color_gray_light">#ddd</color>
 </resources>
