--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/background_light"
     android:fitsSystemWindows="true"
+    android:clipChildren="false"
     tools:context=".ui.activity.MovieDetailActivity"
     >
 
@@ -68,6 +69,7 @@
         android:id="@+id/movie_detail_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipChildren="false"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         />
 
