--- a/app/src/main/res/layout/detail_info.xml
+++ b/app/src/main/res/layout/detail_info.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
+    android:clipChildren="false"
     >
 
     <LinearLayout
@@ -14,6 +15,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="vertical"
+        android:clipChildren="false"
         >
 
         <ImageView
@@ -22,6 +24,7 @@
             android:layout_height="wrap_content"
             android:scaleType="fitStart"
             android:adjustViewBounds="true"
+            android:layout_marginTop="-40dp"
             tools:src="@drawable/placeholder_poster"
             />
 
