--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,9 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="AppTheme.Main" parent="@style/AppTheme.NoActionBar"/>
+    <style name="AppTheme.Details" parent="@style/AppTheme.NoActionBar"/>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
