--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -1,41 +1,63 @@
-<FrameLayout
+<com.github.ksoichiro.android.observablescrollview.ObservableScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
+    android:id="@+id/movie_scroll_view"
     android:layout_width="match_parent"
-    android:clipChildren="false"
+    android:layout_height="match_parent"
+    android:fillViewport="true"
     >
 
-    <LinearLayout
-        android:id="@+id/detail_layout"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:clipChildren="false"
-        android:layout_margin="16dp"
         >
 
-        <include layout="@layout/detail_info"/>
+        <FrameLayout
+            android:id="@+id/movie_cover_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
+            <ImageView
+                android:id="@+id/detail_backdrop_image"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
+                android:layout_gravity="center"
+                tools:src="@drawable/placeholder_backdrop"
+                />
+
+            <ImageButton
+                android:id="@+id/detail_play_btn"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_play_circle_fill_24dp"
+                android:scaleType="centerCrop"
+                android:alpha=".60"
+                android:layout_gravity="center"
+                android:background="@null"
+                android:visibility="gone"
+                />
+
+        </FrameLayout>
 
         <View
+            android:id="@+id/anchor"
+            android:layout_alignTop="@id/movie_cover_container"
+            android:layout_alignBottom="@id/movie_cover_container"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="16dp"
-            android:background="@color/color_gray_light"
+            android:layout_height="match_parent"
             />
 
-        <include layout="@layout/detail_overview" />
-
-        <View
+        <include
+            layout="@layout/movie_detail_content"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="16dp"
-            android:background="@color/color_gray_light"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/anchor"
             />
 
-        <include layout="@layout/detail_reviews" />
+    </RelativeLayout>
 
-    </LinearLayout>
-
-</FrameLayout>
+</com.github.ksoichiro.android.observablescrollview.ObservableScrollView>
