--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -1,63 +1,74 @@
-<com.github.ksoichiro.android.observablescrollview.ObservableScrollView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/movie_scroll_view"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
+    android:layout_width="match_parent"
+    android:clipChildren="false"
     >
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clipChildren="false"
-        >
+<!--<com.github.ksoichiro.android.observablescrollview.ObservableScrollView-->
+    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:id="@+id/movie_scroll_view"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:fillViewport="true"-->
+    <!--&gt;-->
 
-        <FrameLayout
-            android:id="@+id/movie_cover_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:clipChildren="false"-->
+        <!--&gt;-->
 
-            <ImageView
-                android:id="@+id/detail_backdrop_image"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:scaleType="centerCrop"
-                android:layout_gravity="center"
-                tools:src="@drawable/placeholder_backdrop"
-                />
+        <!--<FrameLayout-->
+            <!--android:id="@+id/movie_cover_container"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--&gt;-->
 
-            <ImageButton
-                android:id="@+id/detail_play_btn"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/ic_play_circle_fill_24dp"
-                android:scaleType="centerCrop"
-                android:alpha=".60"
-                android:layout_gravity="center"
-                android:background="@null"
-                android:visibility="gone"
-                />
+            <!--<ImageView-->
+                <!--android:id="@+id/detail_backdrop_image"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="200dp"-->
+                <!--android:scaleType="centerCrop"-->
+                <!--android:layout_gravity="center"-->
+                <!--tools:src="@drawable/placeholder_backdrop"-->
+                <!--/>-->
 
-        </FrameLayout>
+            <!--<ImageButton-->
+                <!--android:id="@+id/detail_play_btn"-->
+                <!--android:layout_width="50dp"-->
+                <!--android:layout_height="50dp"-->
+                <!--android:src="@drawable/ic_play_circle_fill_24dp"-->
+                <!--android:scaleType="centerCrop"-->
+                <!--android:alpha=".60"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:background="@null"-->
+                <!--android:visibility="gone"-->
+                <!--/>-->
 
-        <View
-            android:id="@+id/anchor"
-            android:layout_alignTop="@id/movie_cover_container"
-            android:layout_alignBottom="@id/movie_cover_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+        <!--</FrameLayout>-->
+
+        <!--<View-->
+            <!--android:id="@+id/anchor"-->
+            <!--android:layout_alignTop="@id/movie_cover_container"-->
+            <!--android:layout_alignBottom="@id/movie_cover_container"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--/>-->
 
         <include
             layout="@layout/movie_detail_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/anchor"
+            android:clipChildren="false"
+
             />
 
-    </RelativeLayout>
+    <!--</RelativeLayout>-->
 
-</com.github.ksoichiro.android.observablescrollview.ObservableScrollView>
+<!--</com.github.ksoichiro.android.observablescrollview.ObservableScrollView>-->
+</RelativeLayout>
