--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="color_primary_light">#e57373</color>
     <color name="color_accent">#546e7a</color>
     <color name="color_gray_light">#ddd</color>
+    <color name="color_white">#FFFFFF</color>
 </resources>
