--- a/app/src/main/res/layout/detail_info.xml
+++ b/app/src/main/res/layout/detail_info.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:scaleType="fitStart"
             android:adjustViewBounds="true"
-            android:layout_marginTop="-40dp"
+            android:layout_marginTop="@dimen/detail_poster_margin"
             android:transitionName="@string/detail_poster_transition_name"
             tools:src="@drawable/placeholder_poster"
             />
