--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,5 +14,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="backdrop_image_height">200dp</dimen>
+    <dimen name="detail_poster_margin">-40dp</dimen>
 
 </resources>
