--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -1,62 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    card_view:cardCornerRadius="2dp"
+    tools:layout_width="200dp"
+    tools:layout_Height="300dp" >
 
-    <android.support.v7.widget.CardView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        card_view:cardCornerRadius="2dp"
-        tools:layout_width="200dp"
-        tools:layout_Height="300dp" >
+        android:layout_height="wrap_content">
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/iv_poster"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
+            android:transitionName="@string/detail_poster_transition_name"
+            android:src="@drawable/placeholder_poster"/>
 
-            <ImageView
-                android:id="@+id/iv_poster"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:adjustViewBounds="true"
-                android:transitionName="@string/detail_poster_transition_name"
-                android:src="@drawable/placeholder_poster" />
+        <ImageButton
+            android:id="@+id/ibtn_favourite"
+            android:layout_height="32dp"
+            android:layout_width="32dp"
+            android:padding="8dp"
+            android:layout_gravity="center_vertical"
+            android:background="@null"
+            android:src="@drawable/ic_favorite_border_24dp"
+            android:layout_below="@id/iv_poster"
+            android:layout_alignParentRight="true"
+            style="@style/MovieItemFavouriteIcon" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:padding="8dp"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:lineSpacingMultiplier="1.1"
+            android:textSize="16sp"
+            android:layout_below="@id/iv_poster"
+            android:layout_toLeftOf="@id/ibtn_favourite"
+            android:layout_alignParentLeft="true"
+            tools:text="Zootopia" />
 
-                <TextView
-                    android:id="@+id/tv_title"
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:padding="8dp"
-                    android:ellipsize="end"
-                    android:singleLine="true"
-                    android:lineSpacingMultiplier="1.1"
-                    android:textSize="16sp"
-                    tools:text="Zootopia" />
+    </RelativeLayout>
 
-                <ImageButton
-                    android:id="@+id/ibtn_favourite"
-                    android:layout_height="32dp"
-                    android:layout_width="32dp"
-                    android:padding="8dp"
-                    android:layout_gravity="center_vertical"
-                    android:background="@null"
-                    android:src="@drawable/ic_favorite_border_24dp"
-                    style="@style/MovieItemFavouriteIcon" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-</FrameLayout>
+</android.support.v7.widget.CardView>
