--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,10 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppTheme.Main" parent="@style/AppTheme.NoActionBar"/>
+
+    <style name="AppTheme.Detail" parent="@style/AppTheme.NoActionBar"/>
+
     <style name="MovieItemTitleText">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
