--- a/app/src/main/res/layout/content_movie_review.xml
+++ b/app/src/main/res/layout/content_movie_review.xml
@@ -16,6 +16,8 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_marginTop="@dimen/detail_loading_icon_margin_top"
+        android:layout_gravity="center_horizontal"/>
+
 
 </FrameLayout>
