Update video and review item view.

--- a/app/src/main/res/layout/fragment_integrated_movie_info.xml
+++ b/app/src/main/res/layout/fragment_integrated_movie_info.xml
@@ -14,12 +14,24 @@
 
         <include layout="@layout/content_movie_info" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"/>
+
         <LinearLayout
             android:id="@+id/video_list_container"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp">
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"/>
 
         <LinearLayout
             android:id="@+id/review_list_container"
