--- a/app/src/main/res/layout/video_item.xml
+++ b/app/src/main/res/layout/video_item.xml
@@ -3,20 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight">
+    android:layout_height="@dimen/video_item_height">
 
     <ImageView
-        android:layout_width="56dp"
+        android:layout_width="@dimen/video_icon_size"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:adjustViewBounds="true"
         android:paddingLeft="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         android:src="@drawable/placeholder_video"
         android:id="@+id/video_icon_image"/>
 
     <TextView
         android:id="@+id/tv_video_title"
         android:textSize="16sp"
+        android:textColor="@android:color/black"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:layout_gravity="center"
