--- a/app/src/main/res/layout/fragment_movie_grid.xml
+++ b/app/src/main/res/layout/fragment_movie_grid.xml
@@ -21,6 +21,14 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"/>
 
+        <TextView
+            android:id="@+id/tv_empty_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="32dp"
+            android:visibility="gone"/>
+
     </FrameLayout>
 
 </android.support.v4.widget.SwipeRefreshLayout>
