--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,10 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppTheme.Main" parent="@style/AppTheme.NoActionBar"/>
+
+    <style name="AppTheme.Detail" parent="@style/AppTheme.NoActionBar"/>
+
     <style name="MovieItemFavouriteIcon">
         <item name="android:paddingTop">8dp</item>
         <item name="android:paddingBottom">8dp</item>
