--- a/app/src/main/res/layout/activity_movie_list.xml
+++ b/app/src/main/res/layout/activity_movie_list.xml
@@ -20,6 +20,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_movie_list" />
 
 </android.support.design.widget.CoordinatorLayout>
