--- a/app/src/main/res/layout/content_movie_info.xml
+++ b/app/src/main/res/layout/content_movie_info.xml
@@ -37,15 +37,25 @@
                 android:maxLines="2"
                 android:textSize="24sp"
                 android:textColor="@android:color/black"
-                android:paddingBottom="8dp"
                 tools:text="Zootopia" />
 
             <TextView
                 android:id="@+id/tv_release_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:textSize="16sp"
                 tools:text="2016-04-27" />
+
+            <TextView
+                android:id="@+id/tv_genre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textSize="16sp"
+                android:maxLines="2"
+                android:ellipsize="end"
+                tools:text="Animation" />
 
         </LinearLayout>
 
