Fix padding for action bar.

--- a/app/src/main/res/layout/content_movie_list.xml
+++ b/app/src/main/res/layout/content_movie_list.xml
@@ -4,6 +4,5 @@
     android:id="@+id/movie_list_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="?attr/actionBarSize"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-
-    <!--android:paddingTop="?attr/actionBarSize"-->
