--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -3,7 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="300dp"
     card_view:cardCornerRadius="2dp"
     tools:layout_width="200dp"
     tools:layout_Height="300dp" >
@@ -12,40 +12,41 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/iv_poster"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/tv_title"
             android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"
-            android:transitionName="@string/detail_poster_transition_name"
-            android:src="@drawable/placeholder_poster"/>
+            android:layout_width="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_toLeftOf="@+id/ibtn_favourite"
+            android:layout_alignParentLeft="true"
+            android:padding="4dp"
+            android:ellipsize="end"
+            android:lines="2"
+            android:textSize="16sp"
+            android:gravity="center_vertical"
+            tools:text="Zootopia" />
 
         <ImageButton
             android:id="@+id/ibtn_favourite"
             android:layout_height="32dp"
             android:layout_width="32dp"
-            android:padding="8dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@id/tv_title"
+            android:layout_alignBottom="@id/tv_title"
+            android:padding="4dp"
             android:layout_gravity="center_vertical"
             android:background="@null"
-            android:src="@drawable/ic_favorite_border_24dp"
-            android:layout_below="@id/iv_poster"
-            android:layout_alignParentRight="true"
-            style="@style/MovieItemFavouriteIcon" />
+            android:src="@drawable/ic_favorite_border_24dp"/>
 
-        <TextView
-            android:id="@+id/tv_title"
+        <ImageView
+            android:id="@+id/iv_poster"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:padding="8dp"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:lineSpacingMultiplier="1.1"
-            android:textSize="16sp"
-            android:layout_below="@id/iv_poster"
-            android:layout_toLeftOf="@id/ibtn_favourite"
-            android:layout_alignParentLeft="true"
-            tools:text="Zootopia" />
+            android:layout_alignParentTop="true"
+            android:layout_above="@id/tv_title"
+            android:scaleType="centerCrop"
+            android:transitionName="@string/detail_poster_transition_name"
+            android:src="@drawable/placeholder_poster"/>
 
     </RelativeLayout>
 
