--- a/presentation/src/main/res/layout/app_bar_main.xml
+++ b/presentation/src/main/res/layout/app_bar_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nex3z.popularmovies.presentation.MovieListActivity">
+    tools:context="com.nex3z.popularmovies.presentation.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
