Minor UI tweaks.

--- a/presentation/src/main/res/layout/activity_movie_detail.xml
+++ b/presentation/src/main/res/layout/activity_movie_detail.xml
@@ -20,6 +20,7 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:expandedTitleMarginBottom="56dp"
+            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Headline"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:toolbarId="@+id/tb_movie_detail">
