--- a/presentation/src/main/res/layout/item_movie.xml
+++ b/presentation/src/main/res/layout/item_movie.xml
@@ -4,44 +4,55 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="300dp">
+    android:layout_height="300dp"
+    tools:layout_width="200dp">
 
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <CheckBox
-            android:id="@+id/cb_item_movie_favourite"
-            android:layout_width="24dp"
-            android:layout_height="36dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginRight="8dp"
-            android:gravity="center"
-            android:button="@drawable/ic_selector_favourite"/>
-
-        <TextView
-            android:id="@+id/tv_item_movie_title"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:layout_alignParentBottom="true"
-            android:layout_toLeftOf="@id/cb_item_movie_favourite"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:gravity="center_vertical"
-            android:textColor="@color/colorTextTitle"
-            android:maxLines="2"
-            android:ellipsize="end"
-            tools:text="Zootopia"/>
+        <android.support.constraint.Guideline
+            android:id="@+id/gl_item_movie_bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_end="30dp" />
 
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/sdv_item_movie_poster"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@id/tv_item_movie_title"
-            android:scaleType="centerCrop"
-            app:placeholderImage="@drawable/placeholder_poster_white"/>
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleType="centerInside"
+            app:placeholderImage="@drawable/placeholder_poster_white"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/gl_item_movie_bottom" />
 
-    </RelativeLayout>
+        <CheckBox
+            android:id="@+id/cb_item_movie_favourite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:background="@drawable/ic_selector_favourite"
+            android:button="@null"
+            app:layout_constraintTop_toTopOf="@id/gl_item_movie_bottom"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintDimensionRatio="1"/>
+
+        <TextView
+            android:id="@+id/tv_item_movie_vote"
+            style="@style/TextContent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:drawableLeft="@drawable/ic_star_red_24dp"
+            app:layout_constraintTop_toTopOf="@id/gl_item_movie_bottom"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            tools:text="8.7"/>
+
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
