--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -26,4 +26,11 @@
         <item name="android:textColor">@color/colorTextTitle</item>
     </style>
 
+    <style name="TextMovieInfo" parent="TextTitle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_marginLeft">4dp</item>
+    </style>
+
 </resources>
