--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#448AFF</color>
     <color name="colorTextTitle">#212121</color>
     <color name="colorTextContent">#424242</color>
+    <color name="colorTextHint">#9E9E9E</color>
     <color name="colorDetailTabBg">#40000000</color>
 </resources>
