Add initial loading icon for empty discover list.

--- a/presentation/src/main/res/layout/fragment_discover_movie.xml
+++ b/presentation/src/main/res/layout/fragment_discover_movie.xml
@@ -18,4 +18,10 @@
 
     </com.omadahealth.github.swipyrefreshlayout.library.SwipyRefreshLayout>
 
+    <ProgressBar
+        android:id="@+id/pb_discover_movie_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
+
 </FrameLayout>
